Create entity and dto